<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VVS</string>
    <string name="previous_channel">Previous channel</string>
    <string name="next_channel">Next channel</string>
    <string name="enter_channel_list_url">Enter .u38 channel list URL</string>
    <string name="channel_list_url_title">Channel list URL</string>
    <string name="tech_menu_unlocked">Tech Menu Unlocked</string>
    <string name="load">Load</string>
    <string name="invalid_url">Please enter a valid URL.</string>
    <string name="action_settings">Settings</string>
    <string name="action_play_single">Play Single URL</string>
    <string name="enter_stream_url">Enter stream URL</string>
    <!-- Default URL to retrieve the channel list (.m3u/.u38) -->
    <string name="default_channel_list_url">0.0.0.0</string>

    <!-- Menu and dialog strings for About and settings -->
    <string name="action_about">About</string>
    <string name="about_title">About VVS IPTV</string>
    <string name="about_message">VVS Launcher is an integrated launcher, IPTV, multicast player brought to you by VVS Tech Ltd.</string>
    <string name="reload_on_start">Reload playlist on app startup</string>

    <!-- Settings for buffer configuration -->
    <string name="min_buffer_prompt">Minimum buffer (ms)</string>
    <string name="min_buffer_hint">Enter minimum buffer duration in milliseconds, e.g. 5000</string>
    <string name="invalid_buffer">Please enter a valid buffer duration.</string>

    <!-- Content description for the fullscreen toggle button -->
    <string name="fullscreen">Toggle full screen</string>
    <string name="action_reset_netflix">Reset Netflix now</string>
    <string name="action_tech">Tech</string>
    <string name="background_none">IBS Background</string>
    <string name="backgrounds_missing">No background images found.</string>
    <string name="background_load_failed">Unable to load background image.</string>
    <string name="service_discovery">service discovery...</string>
    <string name="waiting_for_channel">Channels Are Ready</string>
    <string name="channels_ready">Channels Are Ready, select one</string>
    <string name="room_number_title">Room number</string>
    <string name="room_number_hint">Enter room number</string>
    <string name="invalid_room_number">Please enter a valid room number.</string>
    <string name="save">Save</string>
    <string name="exit_title">Exit App</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_show_accessibility">Show Accessibility</string>
    <string name="accessibility_service_description">Remaps the Home button to always open VVS Launcher</string>
    <string name="hide_buffering_animation">Hide buffering animation</string>
</resources>
